--- a/src/component/login/login.css
+++ b/src/component/login/login.css
@@ -1,83 +1,87 @@
-.login-wrapper
-{
+/* Full-page wrapper for login */
+.login-wrapper {
     height: 100vh;
     width: 100%;
-    background-color: #282c34;
+    margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-.login-container
-{
-    height: 600px;
-    width: 50%;
-    background-color: #eee;
-    box-shadow: 5px 5px 10px #eee;
-    display: flex;
-}
-.login-boxes
-{
-    height: 600px;
-    width: 50%;
-    padding: 20px;
-    /* background-color: red; */
-
-}
-
-.login-left
-{
-    background-image: url('../../asstes/invoice.jpg');
+    position: relative;
+    overflow: hidden;
+    background-image: url('../../asstes/log.jpg'); /* Background image */
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 }
 
-.login-right
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.login-heading
-{
-    font-size: 25px;
-    /* text-align: center; */
-}
-.login-input
-{
+/* Dark overlay on top of background */
+.login-wrapper::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
     width: 100%;
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 5px;
-    border-width: 1px;
+    background-color: rgba(0, 0, 0, 0.5); /* Slight dark overlay */
+    z-index: 0; /* Below content */
 }
-.login-btn
-{
+
+/* Clear login container (pop-up) */
+.login-container {
+    position: relative;
+    z-index: 1; /* Above the background and overlay */
+    width: 400px;
+    padding: 30px;
+    background-color: #fff; /* Clean white background */
+    border-radius: 10px;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3); /* Subtle shadow */
+    text-align: center;
+}
+
+/* Login Heading */
+.login-heading {
+    font-size: 28px;
+    color: #333;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+/* Input fields */
+.login-input {
+    width: 100%;
+    padding: 12px;
+    margin: 10px 0;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 16px;
+}
+
+/* Login Button */
+.login-btn {
+    width: 100%;
     border: none;
     background-color: rgb(45, 28, 238);
     color: white;
-    font-size: 15px;
-}
-
-.login-btn:hover
-{
-    background-color: hotpink;
-    transition: 0.5s;
+    font-size: 16px;
+    padding: 12px;
+    border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-.register-link
-{
-    font-size: 18px;
-    margin-top: 10px;
+.login-btn:hover {
+    background-color: hotpink;
+}
+
+/* Register Link */
+.register-link {
+    display: block;
+    font-size: 14px;
+    margin-top: 15px;
     text-decoration: none;
-
+    color: rgb(45, 28, 238);
 }
 
-.image-preview
-{
-    height: 100px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    border-radius: 10px;
+.register-link:hover {
+    text-decoration: underline;
 }
